--- a/app/src/main/res/layout/universal.xml
+++ b/app/src/main/res/layout/universal.xml
@@ -26,7 +26,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="35dp">
 
             <LinearLayout
                 android:id="@+id/line1"
